# codeplex-application-ai-systhem

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  CAN_IT_WORK.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_TEST.md  README.md  SECURITY.md  START_HERE.md  WELCOME.md  WHICH_FILE_TO_READ.md  WINDOWS_QUICK_START.md  YES_IT_WORKS.md  docker-compose.dev.yml  docker-compose.yml  gunicorn_config.py  main.py  nginx.conf  pyproject.toml  quick_test.bat  requirements.txt  setup.bat  setup.sh  verify_startup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-docker.yml  codeql.yml  docker.yml  generator-generic-ossf-slsa3-publish.yml  test.yml
app/: __init__.py  ai_services.py  cache.py  config.py  database.py  logging_setup.py  metrics.py  models.py  retry.py  routes.py  security.py  utils.py  web.py
helm/codeplex-ai/: .helmignore  Chart.yaml  README.md  values.yaml
helm/codeplex-ai/dashboards/: codeplex-ai.json
helm/codeplex-ai/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboard.yaml  hpa.yaml  ingress.yaml  pdb.yaml  redis.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s/: 00-namespace.yaml  10-configmap.yaml  11-secret.example.yaml  20-redis.yaml  30-app-deployment.yaml  31-app-service.yaml  32-app-hpa.yaml  33-app-pdb.yaml  34-app-ingress.yaml  40-prometheus-rbac.yaml  41-prometheus-config.yaml  42-prometheus.yaml  50-grafana-secret.yaml  51-grafana-provisioning.yaml  52-grafana-dashboard.yaml  53-grafana.yaml  README.md
scripts/: dev-cluster.sh
tests/: __init__.py  test_api.py
